# challenge

./: .coverage  .coveragerc  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
app/: auth.py  dependencies.py  main.py
app/routers/: admin.py  user.py
tests/: test_auth.py  test_auth_additional.py  test_routes.py
